# goit-ds-hw-02

./: README.md
app/: pyproject.toml
app/app/: main.py
app/app/classes/: entities.py  seed.py  tables.py
app/app/core/: db.py
